Features under the section marked 'In Progress' are currently in the process of being implemented. They are to be considered unstable and not ready for use.

Features under the section marked 'Current' are completed but pending release as a gem. If you need any of these, you'll need to use the latest source from the git repository.

Features under a numbered section are complete and available in the Wrest gem.


== Coming soon
 * Optional libcurl implementations of the Request/Response classes (for those on MRI who need better performance) 
 * Cookie support
 * Proxy support 
 * 304/ETag response caching
  
== In progress
 * Adding live functional tests to codebase (see spec/functional no feasible way to spec drive Wrest::Resource otherwise)
 * Adding an :alias option to typecast to allow alternative names for attribute accessors (see examples/wow_realm_status.rb)
 
== Current
 * Added redirect follow support for GET requests (see examples/redirection.rb)
 * Auto redirection limit
 * Request timeout limit config
   
== 0.0.8
 * Added URI extension using the [] method (see examples/delicious.rb)
 * Refactored out Request as the first step to adding Response caching
 
 